# Vizu

./: .gitignore  Build.lua  CMakeLists.txt  README.md
App/: Build-App.lua
Core/: Build-Core.lua
app/: CMakeLists.txt  config.json
app/assets/shaders/: glow.frag
app/src/: SoundProcessing.cpp  SoundProcessing.h  main.cpp
app/src/config/: Configuration.cpp  Configuration.hpp
app/src/ui/: Spectrum.cpp  Spectrum.hpp
core/: CMakeLists.txt
core/include/VizuCore/: Ball.hpp  Object.hpp  Platform.hpp  SimulationMap.hpp  Sound.hpp  Vector.hpp
core/src/: Ball.cpp  Object.cpp  Platform.cpp  SimulationMap.cpp  Sound.cpp  test.cpp
